# Ml-Service

./: README.md  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  streamlit_app.py
models/: log_reg.pkl  svm.pkl  xgb_classifier.pkl
